fixed center alignn!!!!

--- a/platforms/browser/www/css/style.css
+++ b/platforms/browser/www/css/style.css
@@ -174,13 +174,14 @@ h1 {
     letter-spacing: 4px;
     font-weight: lighter;
     float: right;
+    padding-right: 20px;
     text-decoration: underline;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .input-clear-button {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
     padding-top: 10px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
@@ -189,45 +190,50 @@ h1 {
 }
 
 .input-clear-button1 {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
+    padding-top: 4px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
     font-weight: lighter;
     font-size: 25px;
 }
 
 .input-clear-button2 {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
+    padding-top: 4px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
     font-weight: lighter;
     font-size: 25px;
 }
 
 .input-clear-button3 {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
+    padding-top: 4px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
     font-weight: lighter;
     font-size: 25px;
 }
 
 .input-clear-button4 {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
+    padding-top: 4px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
     font-weight: lighter;
     font-size: 25px;
 }
 
 .input-clear-button5 {
-    width: 350px;
-    height: 40px;
+    width: 300px;
+    height: 30px;
     padding-right: 27px;
+    padding-top: 4px;
     font-family: "Bebas Neue", Bebas, sanf-serif;
     font-weight: lighter;
     font-size: 25px;
@@ -235,6 +241,11 @@ h1 {
 
 .item-inner {
     padding-top: 40px;
+}
+
+.list-inset {
+    text-align: center;
+    padding-right: 20px;
 }
 
 .container {
@@ -290,14 +301,22 @@ h1 {
     padding-top: 30px;
 }
 
-img.map-popupitem {
-    display: block;
-    text-align: center;
+#mapPopupHolder {
+    position: absolute;
+    width: 100%;
+    padding-top: 60px;
 }
 
 .map-popup {
-    padding-top: 60px;
-    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    padding-right: 20px;
+}
+
+img.map-popup {
+    width: 60%;
 }
 
 #title2 {
