--- a/www/_data/css/_donatenow.sass
+++ b/www/_data/css/_donatenow.sass
@@ -9,12 +9,13 @@
     letter-spacing: 4px
     font-weight: lighter
     float: right
+    padding-right: 20px
     text-decoration: underline
-    font-size: 25px
+    font-size: 20px
 
 .input-clear-button
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
     padding-top: 10px
     font-family: "Bebas Neue", Bebas, sanf-serif
@@ -22,44 +23,53 @@
     font-size: 25px
 
 .input-clear-button1
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
+    padding-top: 4px
     font-family: "Bebas Neue", Bebas, sanf-serif
     font-weight: lighter
     font-size: 25px
 
 .input-clear-button2
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
+    padding-top: 4px
     font-family: "Bebas Neue", Bebas, sanf-serif
     font-weight: lighter
     font-size: 25px
 
 .input-clear-button3
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
+    padding-top: 4px
     font-family: "Bebas Neue", Bebas, sanf-serif
     font-weight: lighter
     font-size: 25px
 
 .input-clear-button4
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
+    padding-top: 4px
     font-family: "Bebas Neue", Bebas, sanf-serif
     font-weight: lighter
     font-size: 25px
 
 .input-clear-button5
-    width: 350px
-    height: 40px
+    width: 300px
+    height: 30px
     padding-right: 27px
+    padding-top: 4px
     font-family: "Bebas Neue", Bebas, sanf-serif
     font-weight: lighter
     font-size: 25px
 
 .item-inner
     padding-top: 40px
+
+.list-inset
+    text-align: center
+    padding-right: 20px
