--- a/www/_data/css/_materialsearch.sass
+++ b/www/_data/css/_materialsearch.sass
@@ -1,8 +1,21 @@
 // main: style.sass
-img.map-popupitem
-    display: block
-    text-align: center
+#mapPopupHolder
+    position: absolute
+    width: 100%
+    padding-top: 60px
 
 .map-popup
-    padding-top: 60px
-    width: 50%
+    display: block
+    margin-left: auto
+    margin-right: auto
+    width: 60%
+    padding-right: 20px
+
+
+img.map-popup
+    width: 60%
+
+// .popupitem
+//     display: table-cell
+//     vertical-align: middle
+//     text-align: center
